# Words-Static-Django

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
words_columns/: apps.py  forms.py  views.py
words_columns/static/: styles.css  styles_form.css
words_columns/templates/app/: index.html  result.html
